# PG-Copilot

./: .gitignore  README.md  openapi_letta.json  openapi_openai.json  pyproject.toml
_old/: Multi-agent recruiting workflow.ipynb  agent.py  api.py  streamlit.py
api/: create_agent.py  delete_agent.py  gcal_token.json  google_api_credentials.json  human.txt  main.py  persona.txt  tools.py  utils.py
api/functions/: coding_functions.py  crazy_functions.py  crazy_translate.py  docker_functions.py  file_functions.py  generate_image.py  git_repo.py  google_calendar_test_setup.py  gsearch.py  list_upcoming_events.py  schedule_event.py  send_sms.py  threat_newsletter.py  website_crawler.py
data/resumes/: spongebob_squarepants.txt  tony_stark.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  global.d.ts  index.tsx  types.ts
frontend/src/components/: AuthContext.tsx  CalendarSection.tsx  ChatWindow.css  ChatWindow.tsx  FileUploader.tsx  Header.tsx  LiveTranscription.tsx  Login.tsx  Logout.tsx  Main.tsx  MessageInput.tsx  ProtectedRoute.tsx  Register.tsx  SpotifyLogin.js  TaskManager.tsx  TaskSection.tsx  TerminalOutput.tsx  UserProfile.tsx  WebPlayback.tsx  setupProxy.js  theme.ts
frontend/src/hooks/: useWebSocket.ts
